# mc

./: .aiignore  .dockerignore  .gitignore  Containerfile  Containerfile-alpine  DEVELOPER.md  Dockerfile  Dockerfile-alpine  Dockerfile-debian  Dockerfile-dev  Dockerfile2  README.md  build_bin.sh  build_rx_bin.sh  compose.dev.alpine.yaml  compose.dev.yaml  dev.sh  docker-compose.dev.yml  install.sh  pyproject.toml  rx.json  rx.toml
.github/workflows/: publish-alpine.yml  publish-docs.yml  publish.yml  reposcan.yml
container/: entrypoint.sh  healthcheck.sh
container/nginx/: site.default.conf  site.ssl.conf
container/redis/: redis.conf
container/supervisor/: api.ini  celery_flower.ini  celery_worker.ini  nginx.ini  redis.ini  scan.ini  ssh-agent-keepalive.ini  supervisord.conf
docker/: entrypoint.sh  healthcheck.sh
docker/supervisor/: celery_flower.ini  scan.ini
docs/content/: index.md  installation.md
libs/: rx-0.1.0-py3-none-any.whl  xscan-0.1.0-py3-none-any.whl  xscan-1.1.0-py3-none-any.whl  xscan-1.2.1-py3-none-any.whl  xscan-1.3.1-py3-none-any.whl
resources/ansible/playbooks/: baseline-debian.yml  baseline-deploy.yml  dockerhost-debian.yml  facts-all.yml  facts-diskusage.yml  wireguard-server.yml
resources/compose-templates/_/: compose.traefik.yaml
resources/compose-templates/traefik-insecure/: compose.yaml  setup.sh
resources/compose-templates/traefik-ssl/: .env  compose.yaml  setup.sh  template.json
resources/compose-templates/webserver-nginx/: compose.yaml  index.html  nginx-default.conf
resources/compose-templates/wordpress/: compose.yaml  template.json
resources/playbooks/: baseline-debian-security.yml  facts-min.yml  hello-world.yml  podmanhost-debian.yml
resources/schemas/deprecated/: container-host.schema.json  container-image.meta.json  credential.meta.json  (+9 more)
resources/toolbox/: dig.json  echo.json  ipinfo.json  nmap.json  ping.json  traceroute.json  whois.json  xscan.json
src/: add_app_stack.py  add_host.py  celery_worker.py  cli.py  compose-app-add.py  domains_import.py  github_discovery.py  hostsfacts.py  hostsping.py  hoststunnel.py  jwe.py  main.py  mcp_server.py  remote.py  rx.py  server.py  ssh_add_key.py  ssh_agent.py  ssh_configure.py  ssh_load_keys.py
src/deployr/: app.py
src/kloudia/: config.py  credentials.py  integrations.py  tasks.py
src/mc/: cache.py  config.py  config_manager.py  credentials.py  credentials_manager.py  include.py  logs.py  rpc.py  setup.py  sshkey_manager.py  tasks.py  users.py  vault.py
src/orchestra/: celery.py  datamodels.py  decorators.py  interface.py  mongodb_helper.py  orchestra.py  project.py  routes.py  settings.py  tasks.py
src/rx/: app.py  config.py  models.py  rx.py
src/xvault/: cli.py  vault.py
ui/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.tsx  api-router.tsx  constants.ts  main.css  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
(+545 files in other folders)
