[project]
name = "mc"
version = "2.0.0"
description = "MissionControl - Launch and manage your containers with ease."
requires-python = ">=3.13"
dependencies = [
    "bcrypt==3.2.2",
    "celery>=5.5.1",
    "docker>=7.1.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.12.4",
    "flower>=2.0.1",
    "gitpython>=3.1.45",
    "paramiko>=4.0.0",
    "podman>=5.6.0",
    "pydantic>=2.11.3",
    "pymongo>=4.12.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.34.2"
]

#[tool.uv.sources]
#xscan = { path = "libs/xscan-1.3.1-py3-none-any.whl" }
#rx = { path = "libs/rx-0.1.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
    "pyinstaller>=6.16.0",
]
